CHATBOT-414 - Export all stats